--- a/Frontend/src/styles/CurrencyRates.css
+++ b/Frontend/src/styles/CurrencyRates.css
@@ -14,13 +14,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between; 
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     height: 60px;
     background-color: var(--container-bg);
     border-bottom: 1px solid var(--border--color);
-    border-radius: 8px; 
 }
-
 .currency-rates-header-title {
     border-right: 1px solid var(--border--color);
     padding: 0px 35px;
@@ -33,6 +31,15 @@
     margin: 0; 
 }
 
+
+.currency-rates-header-actions{
+    display: flex;
+    gap: 16px;
+    border-left: 1px solid var(--border--color);
+    height: 100%;
+    padding: 0px 35px;
+    align-items: center;
+}
 
 .currency-rates-table-container {
     background-color: var(--container-bg);
@@ -63,7 +70,7 @@
     top: 0;
     text-align: center;
     border-right: 1px solid var(--bg-color);
-    border-bottom: 10px solid var(--bg-color);
+    border-bottom: 5px solid var(--bg-color);
 }
 
 
@@ -103,18 +110,29 @@
 }
 
 
+.currency-rates-table td.currency-rates-editable-cell {
+  position: relative;
+  padding: 0 !important;    /* инпут занимает всю площадь ячейки */
+}
 
-.currency-rates-editable-input {
-    width: 100%; 
-    box-sizing: border-box; 
-    padding: 6px;
-    border: 1px solid var(--input-border);
-    border-radius: 4px; 
-    text-align: center;
-    font-size: 11px; 
-    background-color: var(--input-bg);
-    color: var(--text-color);
-    transition: border-color 0.2s, box-shadow 0.2s;
+
+
+
+.currency-rates-table td.currency-rates-editable-cell .currency-rates-editable-input {
+  position: absolute;
+  inset: 0;                 /* top/right/bottom/left = 0 */
+  width: 100%;
+  height: 100%;
+  border: none;             /* границы у ячейки */
+  padding: 0;               /* если нужен воздух: 6px 0 */
+  background: var(--input-bg);
+  color: var(--text-color);
+  border: 1px solid var(--input-border);
+  text-align: center;
+  font: inherit;            /* унаследовать семейство и размер шрифта */
+  box-sizing: border-box;
+  transition: border-color 0.2s, box-shadow 0.2s;
+  font-size: 15px;
 }
 
 .currency-rates-editable-input:focus {
